ajuste vinculaciones proyecto articulos

--- a/src/app/pages/projects/identification/identification.component.scss
+++ b/src/app/pages/projects/identification/identification.component.scss
@@ -18,3 +18,11 @@
 .nav-conect .nav-link.active{
     background: #e1e5ee;
 }
+
+.div-texto-check{
+    background-color: #405189 !important;
+}
+
+.texto-check{
+    color: #fff !important;
+}
