--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -350,15 +350,15 @@
                                                         </div>
                                                         
                                                         <div class="col-lg-1 col">
-                                                            <i style="font-size: 30px;" class="ri-zoom-in-line"></i>
+                                                            <i [ngClass]="{'icon-check': s.monitoreo}" style="font-size: 30px;" class="ri-zoom-in-line"></i>
                                                         </div>
                                                         
                                                         <div class="col-lg-1 col">
-                                                            <i style="font-size: 30px;" class="ri-git-repository-line"></i>
+                                                            <i [ngClass]="{'icon-check': s.reporte}" style="font-size: 30px;" class="ri-git-repository-line"></i>
                                                         </div>
                                                         
                                                         <div class="col-lg-1 col">
-                                                            <i style="font-size: 30px;" class="ri-file-list-3-line"></i>
+                                                            <i [ngClass]="{'icon-check': s.permiso}" style="font-size: 30px;" class="ri-file-list-3-line"></i>
                                                         </div>
 
                                                         <!--<div class="col-lg-4 col">
@@ -375,7 +375,7 @@
                                                         </div>-->
                                                         <div class="col-lg-2 col">
                                                                 <button
-                                                                    class="btn btn-light view-btn" style="width: 100%;"  data-bs-target="#showModal" (click)="openModal(content)">Vincular</button>
+                                                                    class="btn btn-light view-btn" style="width: 100%;"  data-bs-target="#showModal" (click)="openModal(content, s.id)">Vincular</button>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -453,7 +453,8 @@
                                                         <div class="col-lg-3 col">
                                                             <div class="row text-muted text-center">
                                                                 <div class="col-6 border-end border-end-dashed">
-                                                                    <h5 class="mb-1">0</h5>
+                                                                    <h5 class="mb-1">{{v.installations_articles ? v.installations_articles.length : 0
+                                                                    }}</h5>
                                                                     <p class="text-muted mb-0">Vinculaciones</p>
                                                                 </div>
                                                             </div>
@@ -461,7 +462,7 @@
                                                         <div class="col-lg-2 col">
                                                                 <button
                                                                     class="btn btn-light view-btn" style="width: 100%;"
-                                                                    data-bs-target="#showModal" (click)="openModal2(content2)">Vincular</button>
+                                                                    data-bs-target="#showModal" (click)="openModal2(content2, v.id)">Vincular</button>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -561,7 +562,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar" id="close-modal"
             (click)="modal.dismiss('Cross click')"></button>
     </div>
-    <form (ngSubmit)="saveInstallation()" [formGroup]="cuerpoForm" class="tablelist-form" autocomplete="off">
+    <form (ngSubmit)="saveCuerpo()" [formGroup]="cuerpoForm" class="tablelist-form" autocomplete="off">
         <div class="modal-body">
 
             <input type="hidden" name="id" value="" formControlName="ids" />
