ajuste agregar item sub area o sub instalacion

--- a/src/app/pages/projects/installations/installations.component.html
+++ b/src/app/pages/projects/installations/installations.component.html
@@ -134,6 +134,9 @@
                                                 <a href="javascript:void(0);" class="link-primary" 
                                                 title="Ver"
                                                 data-bs-toggle="modal" data-bs-target="#showModal" (click)="editModal(content,data.id)"><i class="ri-eye-line"></i></a>
+
+                                                <a href="javascript:void(0);" class="link-primary" title="Agregar Item" data-bs-toggle="modal" data-bs-target="#showModal" (click)="openModal(content, data.id)"><i
+                                                    class="ri-add-line align-bottom me-1"></i></a>
                                                 
                                                 <a href="javascript:void(0);" class="link-danger" 
                                                 title="Eliminar"
